--- a/dada/DADA/Template/templates/css/default.css
+++ b/dada/DADA/Template/templates/css/default.css
@@ -183,7 +183,10 @@ body {
 	background-color: #efefef;
 	color: #666;
 	text-align: left;
-	padding: 5px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
 	font-size: .9em;
 	-webkit-box-shadow: 0px 0px 10px #330033;
 	-moz-box-shadow: 0px 0px 10px #330033;
