--- a/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
@@ -52,7 +52,7 @@
 
 <form> 
 <div style="text-align:center"> 
-<input type="button" value="Try Moving the, 'dada/installer' Directory and Disabling the, 'install.cgi' script" class="cautionary" onClick="move_installer_dir();" />	
+<input type="button" value="Move the, 'dada/installer' Directory and Disabling the, 'install.cgi' script" class="cautionary" onClick="move_installer_dir();" />	
 </div> 
 </form> 
 
