A few more changes...

--- a/dada/DADA/Template/templates/congrats_screen.tmpl
+++ b/dada/DADA/Template/templates/congrats_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin congrats_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Welcome to <!-- tmpl_var PROGRAM_NAME -->" -->
+<!-- tmpl_set name="title" value="Congratulations, and Welcome to <!-- tmpl_var PROGRAM_NAME -->!" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
  
 <form action="<!-- tmpl_var name="PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
@@ -25,9 +25,6 @@
 	 
 <!-- /tmpl_unless -->
  
- <h1>
-  Congratulations, and Welcome to <!-- tmpl_var name="PROGRAM_NAME" -->!
- </h1>
  <p>
   You installed <!-- tmpl_var name="PROGRAM_NAME" --> correctly. The next 
   thing to do is set up a Mailing List. Be sure you know your <!-- tmpl_var PROGRAM_NAME --> Root Password 
