--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -112,7 +112,7 @@
 				<p>
 			<input type="radio" name="if_dada_files_already_exists"	id="keep_dir_create_new_config" value="keep_dir_create_new_config" checked="checked" onClick="ToggleConfigurationOptions('show');"  /> 
 			<label for="keep_dir_create_new_config">
-				Create a new .dada_config  file.
+				Create a new .dada_config  file
 			</label><br />
 			Use the existing directory structure, but create a new configuration 
 			file, using the information below. 
@@ -122,7 +122,7 @@
 	
 			<p><input type="radio" name="if_dada_files_already_exists"	id="skip_configure_dada_files" value="skip_configure_dada_files" onClick="ToggleConfigurationOptions('hide');" /> 
 			<label for="skip_configure_dada_files">
-				Use the current .dada_config  file.
+				Use the current .dada_config  file
 					</label>
 					<br />
 					No new .dada_config file will be created.
