Trying to make loading a little bit faster.

--- a/dada/DADA/Template/templates/admin_template.tmpl
+++ b/dada/DADA/Template/templates/admin_template.tmpl
@@ -13,8 +13,7 @@
 <!-- /tmpl_if -->
 
   <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/dada_mail_admin_js.js"         type="text/javascript"></script>
-  <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/prototype.js"                  type="text/javascript"></script>
-  <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/scriptaculous.js?load=builder,effects" type="text/javascript"></script>
+  <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/prototype_scriptaculous_package.js" type="text/javascript"></script>
 
 <!-- tmpl_if load_modalbox --> 
   <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/modalbox.js"                   type="text/javascript"></script>
