--- a/dada/DADA/Template/templates/list_cp_options.tmpl
+++ b/dada/DADA/Template/templates/list_cp_options.tmpl
@@ -20,11 +20,13 @@
 
 <legend>FCKeditor/CKeditor Options</legend> 
 
+
+<div class="clearskiesbox">
 <ul>
 	
 <!-- tmpl_if FCKEDITOR_URL --> 
 <li>
- <p class="alert">FCKeditor is currently configured in <!-- tmpl_var PROGRAM_NAME --> at: 
+ <p>FCKeditor is currently configured in <!-- tmpl_var PROGRAM_NAME --> at: 
 	
 		<a href="<!-- tmpl_var FCKEDITOR_URL ESCAPE="HTML" -->" target="_blank">
 		<!-- tmpl_var FCKEDITOR_URL ESCAPE="HTML" -->
@@ -32,26 +34,27 @@
 </p></li>
 <!-- tmpl_else -->  
    <li>
-	<p class="alert">
-			FCKeditor does not currently seem to be configured in <!-- tmpl_var PROGRAM_NAME -->
+	<p>
+			FCKeditor does <em>not</em> seem to be configured in <!-- tmpl_var PROGRAM_NAME -->
 	</p></li>
 <!-- /tmpl_if -->
 
 
 
 <!-- tmpl_if CKEDITOR_URL --> 
-<li> <p class="alert">CKeditor is currently configured in <!-- tmpl_var PROGRAM_NAME --> at: 
+<li> <p>CKeditor is currently configured in <!-- tmpl_var PROGRAM_NAME --> at: 
 	<a href="<!-- tmpl_var CKEDITOR_URL ESCAPE="HTML" -->" target="_blank">
 		<!-- tmpl_var CKEDITOR_URL ESCAPE="HTML" -->
 	</a>
 </p></li>
 <!-- tmpl_else --> 
 	<li>
-	<p class="alert">
-		CKeditor does not currently seem to be configured in <!-- tmpl_var PROGRAM_NAME -->
+	<p>
+		CKeditor does <em>not</em> seem to be configured in <!-- tmpl_var PROGRAM_NAME -->
 	</p></li>
 <!-- /tmpl_if -->
 </ul> 
+</div> 
 
 <table cellpadding="5" border="0"> 
 	<tr> 
