--- a/dada/DADA/Template/templates/list_template.tmpl
+++ b/dada/DADA/Template/templates/list_template.tmpl
@@ -17,7 +17,7 @@
   <div id="PageWrapper">
  	<div id="Header">
 		<a href="<!-- tmpl_var PROGRAM_URL -->">
-			<img src="<!-- tmpl_var S_PROGRAM_URL -->/img/dada_mail_logo.png/" title="<!-- tmpl_var PROGRAM_NAME -->" alt="<!-- tmpl_var PROGRAM_NAME -->" />
+			<img src="<!-- tmpl_var PROGRAM_URL -->/img/dada_mail_logo.png/" title="<!-- tmpl_var PROGRAM_NAME -->" alt="<!-- tmpl_var PROGRAM_NAME -->" />
 	    </a>
 			<!-- tmpl_if show_profile_widget --> 
 				<!-- tmpl_var profile_widget --> 
