--- a/dada/DADA/Template/templates/send_url_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_url_email_screen.tmpl
@@ -50,9 +50,11 @@
 			<!-- tmpl_else-->
 
         <!-- tmpl_if list_settings.group_list --> 
-            <p class="positive">
+            <div class="clearskiesbox">
+			<p>
 				Discussion List Support is enabled and Discussion List preferences will be honored.
         	</p>
+		</div>
 		<!--/tmpl_if--> 
 
 		
